Changes for 2.0.13rc1

New features:
A.F....... [ZBX-1357] updated Slovak and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....PS. [ZBX-8608] added support of IP masks for action conditions (Sasha)
A.F....... [ZBX-8151] fixed XXE vulnerability on XML import using obsolete libxml versions; thanks to pnig0s@Freebuf for the report (Andrejs)
..F....... [ZBX-8358] fixed overview screen elements being displayed incorrectly after refreshing (Pavels)
........S. [ZBX-8348] fixed processing of lld triggers; functions in a trigger expression could be not on the places (Sasha)
...G...PS. [ZBX-8343] fixed a bug in binary heap that could cause a slightly inconsistent ordering of elements in the queue (asaveljevs)
...G...... [ZBX-8327] fixed possible crash when processing Windows eventlog (wiper)
.......PS. [ZBX-8188] fixed IPMI items staying supported when sensor data becomes unavailable (asaveljevs, dimir)
.......PS. [ZBX-7576] when pinging a broadcast address ignore responses from other addresses (wiper)
...G...... [ZBX-6531] fixed memory leak in filesystem discovery on AIX systems (Juris)
..F....... [ZBX-8241] fixed duplicate display of actions in media type list (Andrejs)
...G...... [ZBX-8269] fixed processing of active checks in agent (Andris)
...G...... [ZBX-8238] fixed updating agent 'mtime' for logrt[] items; thanks to Yoshinori Komuro for patch (Andris)
...G...PS. [ZBX-7098] improved handling of log file rotation/truncation for logrt[] and log[] items (Andris)
...G...... [ZBX-8198] decreased verbosity of Windows agent with DebugLevel=4 (Nikolaj)
...G...... [ZBX-7875] fixed wrongly reported system version for Windows 8.1 and Server 2012 R2 (Nikolaj, wiper)

--------------------------------------------------------------------------------
Changes for 2.0.12

2.0.12rc3 was released as 2.0.12 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.12rc3

Bug fixes: