@@ -1,0 +1,24 @@
+In order to upgrade the Android JSON library, follow the procedure below:
+
+### get the repository
+
+$ git clone https://android.googlesource.com/platform/libcore android-libcore
+$ cd android-libcore
+
+### choose the tag you wish to upgrade to (android-4.3_r3.1 in the example below)
+
+$ git tag | less
+$ git checkout android-4.3_r3.1
+
+### compile the library using JDK 1.6 so that it runs on older versions of Java and package it
+
+$ cd json/src/main/java
+$ javac org/json/*.java
+$ jar cf android-json-4.3_r3.1.jar org/json/*.class
+$ mv android-json-4.3_r3.1.jar ${zabbix}/src/zabbix_java/lib
+
+### clean up
+
+$ rm org/json/*.class
+$ cd ../../../..
+$ git checkout master
